# cmake-good

./: CMakeLists.txt  README.md  hello.cpp  hello.hpp  main.cpp
.github/workflows/: cmake.yml
cmake-functions/: CMakeLists.txt
cmake-property/: CMakeLists.txt
cmake-scopes/: CMakeLists.txt
hello-exe/: main.cpp
say-hello/: CMakeLists.txt
say-hello/src/say-hello/: hello.cpp
